extra-test/phase1/tmp_test_1_s10.out
extra-test/phase1//test_1_s10.spl:1:5: [31merror:[0m missing valid identifier [[31mB[0m]
       1 |int [31ma,b,,[0mc,d;
         |    [31m^~~~~[0m
